## goalie 0.2.14 (2019-04-02)

### Minor changes

- Improved code coverage, getting closer to 100%.



## goalie 0.2.13 (2019-03-31)

### Minor changes

- Overhauled and improved assert checks.
- Miscellaneous bug fixes for assert checks.



## goalie 0.2.12 (2019-03-22)

### Minor changes

- Migrated domain to [Acid Genomics][].



## goalie 0.2.11 (2019-03-17)

### Minor changes

- `isDirectory`, `isFile`: Now return with `cause` attribute set on failure.
- Updated assert checks and reworked comments to pass lintr checks.



## goalie 0.2.10 (2019-03-10)

### Minor changes

- `isSubset`: Improved cause message, which would error using internal `deparse`
  call on long vectors.



## goalie 0.2.9 (2019-02-25)

### Minor changes

- Needed to tweak internal code in `assignToBody` to fix backports handling of
  `...elt` for R 3.4.
- `hasAccess`: Needed to add `uname` call internally for R 3.4 backward
  compatibility, for checks that rely upon `isTRUE` to return `TRUE`, as
  expected. The handling of this situation has changed in R 3.5.



## goalie 0.2.8 (2019-02-11)

### Minor changes

- Bioconda unit tests revealed that `...elt` approach used in `assert` isn't
  backward compatible with R 3.4. The backports package was added as a
  dependency, which provides legacy support for `...elt` in R 3.4. This is
  called internally inside `.onLoad` specifically for R releases prior to 3.5.



## goalie 0.2.7 (2019-02-11)

### Minor changes

- `assert`: `traceback` argument is disabled by default. Note that this can be
  enabled globally using `options(goalie.traceback = TRUE)`, which can be useful
  for code debugging in some situations.
- `isSubset`: Improved cause message if user attempts to pass in `NULL` for
  either `x` or `y` arguments.
- `hasNonZeroRowsAndCols`: Fixed typo in internal code that didn't check using
  `hasCols` properly.
- `isFlag`: Improved cause message if user passes in `NA`.



## goalie 0.2.6 (2019-01-22)

### New functions
