@@ -80,17 +80,17 @@
 <h3 class="hasAnchor">
 <a href="#bioconductor-method" class="anchor"></a><a href="https://bioconductor.org/">Bioconductor</a> method</h3>
 <p>We recommend installing the package with <a href="https://cran.r-project.org/package=BiocManager">BiocManager</a>.</p>
-<div class="sourceCode"><pre class="sourceCode r"><code class="sourceCode r"><span class="cf">if</span> (<span class="op">!</span><span class="kw"><a href="https://www.rdocumentation.org/packages/base/topics/library">require</a></span>(<span class="st">"BiocManager"</span>)) {
-    <span class="kw"><a href="https://www.rdocumentation.org/packages/utils/topics/install.packages">install.packages</a></span>(<span class="st">"BiocManager"</span>)
-}
-BiocManager<span class="op">::</span><span class="kw"><a href="https://www.rdocumentation.org/packages/BiocManager/topics/install">install</a></span>(<span class="st">"remotes"</span>)
-BiocManager<span class="op">::</span><span class="kw"><a href="https://www.rdocumentation.org/packages/BiocManager/topics/install">install</a></span>(<span class="st">"acidgenomics/goalie"</span>)</code></pre></div>
+<div class="sourceCode" id="cb1"><pre class="sourceCode r"><code class="sourceCode r"><a class="sourceLine" id="cb1-1" data-line-number="1"><span class="cf">if</span> (<span class="op">!</span><span class="kw"><a href="https://www.rdocumentation.org/packages/base/topics/library">require</a></span>(<span class="st">"BiocManager"</span>)) {</a>
+<a class="sourceLine" id="cb1-2" data-line-number="2">    <span class="kw"><a href="https://www.rdocumentation.org/packages/utils/topics/install.packages">install.packages</a></span>(<span class="st">"BiocManager"</span>)</a>
+<a class="sourceLine" id="cb1-3" data-line-number="3">}</a>
+<a class="sourceLine" id="cb1-4" data-line-number="4">BiocManager<span class="op">::</span><span class="kw">install</span>(<span class="st">"remotes"</span>)</a>
+<a class="sourceLine" id="cb1-5" data-line-number="5">BiocManager<span class="op">::</span><span class="kw">install</span>(<span class="st">"acidgenomics/goalie"</span>)</a></code></pre></div>
 </div>
 <div id="conda-method" class="section level3">
 <h3 class="hasAnchor">
 <a href="#conda-method" class="anchor"></a><a href="https://conda.io/">conda</a> method</h3>
 <p>Configure <a href="https://conda.io/">conda</a> to use the <a href="https://bioconda.github.io/">bioconda</a> channels.</p>
-<div class="sourceCode"><pre class="sourceCode bash"><code class="sourceCode bash"><span class="ex">conda</span> install -c bioconda r-goalie</code></pre></div>
+<div class="sourceCode" id="cb2"><pre class="sourceCode bash"><code class="sourceCode bash"><a class="sourceLine" id="cb2-1" data-line-number="1"><span class="ex">conda</span> install -c bioconda r-goalie</a></code></pre></div>
 </div>
 </div>
 <div id="overview" class="section level2">
@@ -146,7 +146,6 @@ BiocManager<span class="op">::</span><span class="kw"><a href="https://www.rdocu
 <ul class="list-unstyled">
 <li><a href="https://travis-ci.com/acidgenomics/goalie"><img src="https://travis-ci.com/acidgenomics/goalie.svg?branch=master" alt="Travis CI build status"></a></li>
 <li><a href="https://ci.appveyor.com/project/mjsteinbaugh/goalie"><img src="https://ci.appveyor.com/api/projects/status/81he1lj6usgke7x2?svg=true" alt="AppVeyor CI build status"></a></li>
-<li><a href="https://codecov.io/gh/acidgenomics/goalie"><img src="https://codecov.io/gh/acidgenomics/goalie/branch/master/graph/badge.svg" alt="Codecov percent coverage"></a></li>
 <li><a href="https://anaconda.org/bioconda/r-goalie"><img src="https://anaconda.org/bioconda/r-goalie/badges/version.svg" alt="Anaconda cloud version"></a></li>
 <li><a href="https://www.repostatus.org/#active"><img src="https://www.repostatus.org/badges/latest/active.svg" alt="Repo status: active"></a></li>
 </ul>
