@@ -112,6 +112,8 @@
 <h3 class="hasAnchor">
 <a href="#minor-changes" class="anchor"></a>Minor changes</h3>
 <ul>
+<li>
+<code>standardizeCall</code>: Improved <code>isNonNegative</code> assert check by wrapping in <code>unname</code> call, to keep backward compatibility with R 3.4.</li>
 <li>Improved code coverage, getting closer to 100%.</li>
 </ul>
 </div>
