@@ -1,4 +1,4 @@
-pandoc: 1.19.2.1
+pandoc: 2.3.1
 pkgdown: 1.3.0
 pkgdown_sha: ~
 articles: []
