@@ -138,7 +138,8 @@
 
     <h2 class="hasAnchor" id="examples"><a class="anchor" href="#examples"></a>Examples</h2>
     <pre class="examples"><div class='input'><span class='co'>## TRUE ====</span>
-<span class='fu'>isAlpha</span>(<span class='fl'>0.05</span>)</div><div class='output co'>#&gt; [1] TRUE</div><div class='input'>
+<span class='fu'>isAlpha</span>(<span class='fl'>0.05</span>)</div><div class='output co'>#&gt; 0.05 
+#&gt; TRUE </div><div class='input'>
 <span class='co'>## FALSE ====</span>
 <span class='fu'>isAlpha</span>(<span class='st'>"xxx"</span>)</div><div class='output co'>#&gt; [1] FALSE
 #&gt; Cause of failure:
