@@ -169,7 +169,8 @@ If set to <code>TRUE</code>, <code>x</code> may also be <code>NULL</code>.</p></
     <h2 class="hasAnchor" id="examples"><a class="anchor" href="#examples"></a>Examples</h2>
     <pre class="examples"><div class='input'><span class='co'>## TRUE ====</span>
 <span class='fu'>isDirectory</span>(<span class='fu'><a href='https://www.rdocumentation.org/packages/base/topics/c'>c</a></span>(<span class='st'>"~"</span>, <span class='st'>"~"</span>))</div><div class='output co'>#&gt;    ~    ~ 
-#&gt; TRUE TRUE </div><div class='input'><span class='fu'>isADirectory</span>(<span class='st'>"~"</span>)</div><div class='output co'>#&gt; [1] TRUE</div><div class='input'>
+#&gt; TRUE TRUE </div><div class='input'><span class='fu'>isADirectory</span>(<span class='st'>"~"</span>)</div><div class='output co'>#&gt;    ~ 
+#&gt; TRUE </div><div class='input'>
 <span class='co'>## FALSE ====</span>
 <span class='fu'>isDirectory</span>(<span class='fl'>1L</span>)</div><div class='output co'>#&gt; [1] FALSE
 #&gt; Cause of failure:
