@@ -183,8 +183,7 @@ the call was standardized.</p></li>
     <span class='kw'>definition</span> <span class='kw'>=</span> <span class='kw'>function</span>(<span class='no'>a</span>, <span class='no'>b</span>, <span class='no'>...</span>) {
         <span class='fu'>standardizeCall</span>()
     }
-)
-<span class='fu'>testing</span>(<span class='no'>aaa</span>, <span class='no'>bbb</span>)</div><div class='output co'>#&gt; testing(a = aaa, b = bbb)</div></pre>
+)</div><div class='output co'>#&gt; [1] "testing"</div><div class='input'><span class='fu'>testing</span>(<span class='no'>aaa</span>, <span class='no'>bbb</span>)</div><div class='output co'>#&gt; testing(a = aaa, b = bbb)</div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="sidebar">
     <h2>Contents</h2>
